ui: Fix logo width to prevent layout break on small screens

--- a/static/cdedb.css
+++ b/static/cdedb.css
@@ -36,9 +36,10 @@ body{
 }
 .logo {
     padding-bottom: 10px;
+    width: 80%;
 }
 .logo img {
-    max-width: 80%;
+    max-width: 100%;
 }
 
 /* ********************** *
